--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+Jinja2==2.7.1
+MarkupSafe==0.18
+Pygments==1.6
 South==0.8.1
+Sphinx==1.2b1
 argparse==1.2.1
 coverage==3.6
 distribute==0.6.40
@@ -9,7 +13,9 @@ django-honeypot==0.3.0
 django-model-utils==1.4.0
 django-picklefield==0.3.0
 django-registration==1.0
+django-secure==1.0
 djangospam==1.0.0
+docutils==0.11
 git-remote-helpers==0.1.0
 psycopg2==2.5
 pyelasticsearch==0.5
